# mieleMatterBridge

./: .gitignore  CMakeLists.txt  MISSIONPROMPT.md  MISSION_CONTROL.md  README.md  WSL-Migration.md  expertise.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local  testVendorIssue.md
.agents/: AGENT_SKILLS_UEBERSICHT_DE.md  ONBOARDING_SPECIALIST_INTEGRATION_DE.md  ROLE_BOUNDARY_FIRMWARE_VS_EMBEDDED_DE.md  UI_UX_DESIGNER_INTEGRATION_DE.md  agent_skills_catalog.json  build_tooling_steward.md  build_tooling_steward.yaml  delivery_planner.md  delivery_planner.yaml  expert_embedded_coder.md  expert_embedded_coder.yaml  firmware_coder.md  firmware_coder.yaml  handover_templates.yaml  hyprid-ux-designer.md  matter_api_mapper.md  matter_api_mapper.yaml  matter_commissioning_forensics.md  matter_commissioning_forensics.yaml  role_boundary_firmware_vs_embedded.yaml  system_architect.md  system_architect.yaml  technical_writer.md  technical_writer.yaml  ui_ux_designer.md  ui_ux_designer.yaml  validation_tester.md  validation_tester.yaml
.github/workflows/: build-test.yml
backlog/: qr-generator.md  qr.cpp
components/miele_client/: CMakeLists.txt  miele_client.cpp
components/qrcode/: CMakeLists.txt  qrcodegen.cpp
components/ssd1306_simple/: CMakeLists.txt  ssd1306.c
docs/: BertsMatterSchmiede_Setup_Guide.md  BertsMatterSchmiede_Setup_Guide_02.md  DAILY_LOG_2026-04-21.md  DAILY_LOG_2026-04-22.md  HANDOVER_PHASE_1.md  action_plan_option1.md  expert_prompt_dishwasher.md  expert_prompt_dishwasher_answer.md  final_expert_summary.md  final_expert_summary_answer.md  final_vendor_analysis.md  fuckup_night_miele_bridge.md  test_vendor_issue.md  ultimate_ecosystem_realization.md  ultimate_ecosystem_realization_answer.md  vendor_issue_report.md
docs/adr/: 0001-credential-provisioning-and-time-sync.md  0002-aggregator-architecture-pattern.md
docs/hardware/: ALTERNATIVE_TARGET_HARDWARE01.md  TARGET_HARDWARE.md
docs/mapping/: matter_miele_dishwasher_mapping.md  matter_requirements_1.5.md
docs/miele3rdpartyapi/: Miele_OAUTH.md  (+1 more)
main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp  miele_matter_mapping.cpp  miele_matter_mapping.h  ui_manager.h
main/www/: index.html
scratch/: decode_qr.py  parse_qr.py  read_serial.py  read_serial_wsl.py  serial_logger.py
(+6 files in other folders)
